# MRB-Long-Term-CBA-Module

./: .gitignore  README.md  docker-compose.demo.yml  docker-compose.yml  dockerfile  pyproject.toml
demo/: demo_run.py
demo/demo_inputs/: hazard_zones.json
my_inputs/: config.json  exposure_by_zone.json
my_outputs/: summary.json
my_outputs/output/: phase1_matrix.json  phase1_new_planification.json  phase2_matrix.json  phase2_risk_mitigation.json  phase2_type_summary.json
src/mrb_longterm/: __init__.py  cli.py  config.py  importance_tables.py  io.py  models.py  pipeline.py  scoring.py
tests/: test_e2e.py  test_importance.py  test_pipeline.py  test_scoring.py
